tethysapp/data_browser/public/css/main.css
/* override default styles */
#app-content-wrapper #app-content{
    height: 100%;
    padding-top: 0;
    padding-bottom: 0;
}
#inner-app-content{
    padding: 0;
}

#app-content-wrapper #app-content #app-actions{
    height: 50px;
    padding-top: 5px;
}

#app-header .tethys-app-header .toggle-nav {
    margin-top: 10px;
}

#app-header .tethys-app-header {
    height: 60px;
}

#app-header .tethys-app-header .icon-wrapper {
    margin-left: 15px;
    padding: 7px 10px;
}

#app-header .tethys-app-header .icon-wrapper img {
    height: 46px;
    border-radius: 0;
}

#app-header .tethys-app-header .app-title-wrapper .app-title {
    padding: 0;
    padding-left: 60px;
}

#app-header .tethys-app-header .exit-button {
    margin-top: 10px;
}

#app-header .tethys-app-header .exit-button a {
    padding: 5px 10px;
}

#app-content-wrapper #app-content #app-navigation {
    padding-top: 60px;
}

#app-content-wrapper #app-content #app-navigation .nav {
    padding: 5px 0 0 0;
}

#app-content-wrapper #app-content #app-navigation .nav li a:hover {
    background: #f5f5f5;
}



/* app styles */

h1.title{
    border-bottom: 1px solid gray;
}

.collection,
.filter-group{
    margin: 2px 0;
    padding: 10px;
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0.5);
}

.filter-group{
    padding-left: 32px;
}

.collection:hover{
    background-color: rgba(255, 255, 255, 0.9);
}

.collection-color{
    margin-top: 5px;
    height: 25px;
    width: 25px;
    border: 1px solid black;
    border-radius: 8px;
}

.collection h2,
.filter-group h2{
    width: 215px;
    font-size: 20px;
    line-height: 100%;
    margin-top: 0;
    display: inline-block;
}

.right{
    float: right;
}

.left{
    float: left;
}

#search-button{
    margin: 5px;
}

#hidden{
    display: none;
}

#layout{
  padding-top: 60px;
  padding-bottom: 50px;
  height:100%;
  width: 100%;
}

#layout-nav{
    width: 50%;
    margin: auto;
}

#layout-nav .nav-tab a{
    background: rgba(255, 255, 255, 0.2);
    margin: 0 2px;
    color: rgb(26, 51, 76);
}

#layout-nav .nav-tab a:hover{
    background: rgba(255, 255, 255, 0.7);
}

#layout-nav .nav-tab a.active{
    background: rgb(26, 51, 76);
    color: white;
}

#layout-nav .nav-tab a.active:hover{
    background: rgba(26, 51, 76, 0.7);
}

#plot-container,
#collection-details-container,
#metadata-container{
    width: 100%;
    height: 100%;
    background: white;
}

#metadata-container{
    padding: 10px 2px 5px 10px;
}
#metadata-content{
    overflow: auto;
}
#close-metadata-btn{
    position: absolute;
    right: 5px;
}

#collection-details-content{
    padding: 10px;
    overflow-y: auto;
}
/*
#collection-details-content thead,tbody{
    display: inline-block;
}

#collection-details-content tbody{
    max-height: 150px;
    overflow-y: auto;
}
*/
#collection-details-content td{
    vertical-align: middle;
}

#collection-details-content tr.selected td{
    background: rgb(26, 51, 76);
    color: white;
}
#collection-details-content table tr.selected:hover td{
    background: rgba(26, 51, 76, 0.8);
}

#collection-details-nav{
    width: 50%;
    margin: auto;
}

#collection-details-nav .nav-tab a{
    background: rgba(26, 51, 76, 0.7);
    margin: 0 2px;
    color: white;
}

#collection-details-nav .nav-tab a:hover{
    background: rgba(26, 51, 76, 0.2);
}

#collection-details-nav .nav-tab.active a{
    background: rgb(26, 51, 76);
    color: white;
}

#collection-details-nav .nav-tab.active a:hover{
    background: rgba(26, 51, 76, 0.2);
}


#minimize-collection-details{
    margin: 2px;
    float: right;.active
}

#visualize-modal-container{
    width: 99%;
}


/*
.ol-ctx-menu-container {
    position: absolute;
    background: #333 !important;
    color: #fff !important;
    font-size: 15px !important;
}
*/
.map-toggle-control{
    position: fixed;
    right: 20px;
    top: 150px;
}
.context-menu-title span{
    margin-top: 10px;
    font-size: 20px;
}

/* checkbox_tree styles */

.checkbox-tree{
    margin-left: -20px;
}

.checkbox-tree ul {
  list-style: none;
  padding-left: 15px;
}

.checkbox-tree > ul{
    padding-left: 0;
}

.collapsible-container{
    padding-left: 32px;
}

.collapsible{
    display: inline-block;
    padding: 2px 7px;
    border-radius: 12px;
    cursor: pointer;
    transform: rotate(180deg);
    transition: transform 0.5s;
    vertical-align: top;
    margin-left: -28px;
}

.collapsible:hover{
    background-color: rgba(255, 255, 255, 0.5);
}

.collapsible.collapsed{
    transform: rotate(360deg);
}

